Fix scrolling to sections being covered by header

--- a/src/assets/stylesheets/main.css
+++ b/src/assets/stylesheets/main.css
@@ -122,6 +122,13 @@ body {
     background-color: var(--tdp-body-bg-color);
 }
 
+section::before {
+     content:"";
+     display:block;
+     height:70px; /* fixed header height*/
+     margin:-70px 0 0; /* negative fixed header height */
+ }
+
 .page-wrapper {
     min-height: 100%;
     display: flex;
